--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: darkgoldenrod;
-  overflow: hidden;
 }
 .content {
   margin: 5vw;
@@ -17,22 +16,24 @@ body {
   padding-bottom: 20px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 25px;
 }
 
 .bannerImg {
-  max-width: 100%;
-  height: 10%;
+  min-width: 100vw;
+  max-height: 15vw;
 }
 
 .header {
   margin: auto;
-  height: 300px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 100px;
   box-shadow: 0px 0px 10px 3px blanchedalmond;
+  overflow: hidden;
 }
 
 h1 {
@@ -59,14 +60,18 @@ h2 {
   padding-right: 5px;
 }
 
+.header1 {
+}
+
 .blockA {
   display: flex;
-  height: 700px;
+  max-height: 175vh;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   row-gap: 50px;
   margin-bottom: 75px;
+  overflow-y: auto;
 }
 
 .blockB {
@@ -112,7 +117,7 @@ h2 {
   margin-left: 50px;
   justify-content: center;
   position: relative;
-  left: 200px;
+  left: 30%;
   top: 75px;
 }
 
@@ -123,6 +128,6 @@ h2 {
 p.rotateBack {
   position: relative;
   top: 200px;
-  left: 180px;
+  left: 20%;
   color: blanchedalmond;
 }
