--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   background-color: darkgoldenrod;
 }
 .content {
-  margin: 5vw;
+  margin: 10vw;
   box-sizing: border-box;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   background-color: darkgoldenrod;
@@ -30,9 +30,9 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   margin-bottom: 100px;
   box-shadow: 0px 0px 10px 3px blanchedalmond;
+  flex-basis: auto;
   overflow: hidden;
 }
 
@@ -58,9 +58,17 @@ h2 {
 .header4 {
   padding-left: 5px;
   padding-right: 5px;
+  max-width: 100%;
 }
 
-.header1 {
+.header1,
+.header2,
+.header4 {
+  flex: 1;
+}
+
+.header3 {
+  flex: 2;
 }
 
 .blockA {
@@ -70,8 +78,10 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-between;
   row-gap: 50px;
+  column-gap: 25px;
   margin-bottom: 75px;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .blockB {
@@ -129,5 +139,28 @@ p.rotateBack {
   position: relative;
   top: 200px;
   left: 20%;
+}
+
+.footerImgBox {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 5vw;
+  margin-left: 2vw;
+}
+
+p {
   color: blanchedalmond;
+  margin-bottom: 25px;
+  font-size: 1.3rem;
+}
+
+.sixtiesP {
+  margin-left: 2vw;
+}
+
+.sixties {
+  min-height: 30vh;
+  min-width: none;
+  max-height: 35vh;
+  max-width: 30vw;
 }
