--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ h2 {
   display: flex;
 }
 
+.header2,
+.header3 {
+  flex: 2 2 0;
+}
+
 .container.header img,
 .container.header h1 {
   flex: 1 1 0;
