--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,19 @@
 
 .bannerText {
   color: rgb(63, 55, 33);
-  background-color: #f7d06e;
-  border: 1px solid #f7d06e;
+  background-color: rgba(255, 235, 205, 0.4);
+
   border-radius: 4px;
-  box-shadow: 0 0 3px 5px #f7d06e;
+  box-shadow: 0 0 3px 3px rgba(255, 235, 205, 0.7);
   text-align: center;
   width: fit-content;
   height: fit-content;
 }
 
 .bannerTextBox {
+  /* Needed just to hide corners under box-radius */
+  background-color: rgba(255, 235, 205, 0.4);
+  border-radius: 4px;
   margin-left: 10vw;
   margin-right: 10vw;
   position: absolute;
@@ -45,6 +48,7 @@
   font-size: max(2vh);
 }
 
+/* Position links */
 .bannerTextBox.box1 {
   left: 5%;
 }
@@ -57,9 +61,6 @@
   left: 65%;
 }
 
-/* TODO:
-Change order of items with @media when .header reaches 
-a large size so that title shows */
 .header {
   margin: auto;
   display: flex;
